kuber-homeworks/2.3/files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: nginx-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx
        ports: 
        - containerPort: 80
          name: nginx-port
        volumeMounts:
        - name: web-html
          mountPath: /usr/share/nginx/html
        #   multitool
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: http-port
      volumes:
      - name: web-html
        configMap:
          name: api-html
