kuber-homeworks/2.3/files/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - name:  nginx-port
      protocol: TCP
      port:  80
