kuber-homeworks/2.3/files/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: default
spec:
  ports:
    - name: nginx-port
      port: 80
      protocol: TCP
      nodePort: 30080
  selector:
    app: nginx-multitool
  type: NodePort
